@@ -11,7 +11,9 @@ Bugfixes:
   authoritative RRsets become glue [OPENDNSSEC-282].
 * OPENDNSSEC-290: Signer Engine: Fix false conflict when changing CNAME into 
   other RRtype.
-* OPENDNSSEC-298: Only unlink existing pidfile on exit if we wrote it.
+* OPENDNSSEC-298: Enforcer: Only unlink existing pidfile on exit if we wrote it.
+* OPENDNSSEC-304: Signer Engine: Check pidfile on startup, if pidfile exists
+  and corresponding process is running, then complain and exit.
 
 
 OpenDNSSEC 1.4.0a2 - 2012-05-24
